tests/ui/parser/issues/issue-68091-unicode-ident-after-if.stderr
error: missing condition for `if` expression
  --> $DIR/issue-68091-unicode-ident-after-if.rs:8:10
   |
LL |         $($c)ö* {}
   |                 - if this block is the condition of the `if` expression, then it must be followed by another block
...
LL |     x!(if);
   |          ^ expected condition here

error: aborting due to 1 previous error

