tests/ui/parser/issues/issue-68091-unicode-ident-after-if.rs
macro_rules! x {
    ($($c:tt)*) => {
        $($c)ö* {}
    };
}

fn main() {
    x!(if); //~ ERROR missing condition for `if` expression
}
